--- a/src/assets/styles/Header.module.css
+++ b/src/assets/styles/Header.module.css
@@ -1,6 +1,5 @@
 .header {
-    background-color: #239FD0;
-    box-shadow: 0px 5px 14px rgba(0, 0, 0, 0.250);
+    box-shadow: 0px 1px 14px rgba(0, 0, 0, 0.250);
 }
 
 .nav {
@@ -8,4 +7,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+}
+
+.nav
+
+.nav .btnArea {
+    display: flex;
+    gap: 5px;
 }
