Criação do Header

--- a/src/assets/styles/Header.module.css
+++ b/src/assets/styles/Header.module.css
@@ -9,7 +9,16 @@
     padding: 20px;
 }
 
-.nav
+.nav .logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+}
+
+.logo img {
+    width: 40px;
+}
 
 .nav .btnArea {
     display: flex;
