--- a/src/assets/styles/Button.module.css
+++ b/src/assets/styles/Button.module.css
@@ -1,12 +1,24 @@
 .primaryButton {
     background-color: #239FD0;
-    border: none;
+    border: 2px solid transparent;
     border-radius: 20px;
     outline: 0;
     padding: 10px 20px;
     color: white;
     font-weight: bold;
     cursor: pointer;
+}
+
+.primaryButton:hover {
+    background-color: rgba(35, 159, 208, 0.800);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    transition: 0.2s ease-in-out;
+}
+
+.primaryButton:active {
+    background-color: transparent;
+    border: 2px solid #239FD0;
+    color: #239FD0;
 }
 
 .secondaryButton {
@@ -18,4 +30,14 @@
     color: #239FD0;
     font-weight: bold;
     cursor: pointer;
+}
+  
+.secondaryButton:hover {
+    color: rgba(35, 159, 208, 0.800);
+    transition: 0.2s ease-in-out;
+}
+
+.secondaryButton:active {
+    text-decoration: 2px underline;
+    transition: 0.2s ease-in-out;
 }
