--- a/src/assets/styles/LoginForm.module.css
+++ b/src/assets/styles/LoginForm.module.css
@@ -1,3 +1,14 @@
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(15px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .mainContent {
     max-width: 1000px;
     display: flex;
@@ -6,6 +17,8 @@
     margin: 40px auto;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.250);
     border-radius: 20px;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards; /* Duração, tipo de transição e preenchimento */
 }
 
 .leftSide {
