--- a/src/assets/styles/LandingPage.module.css
+++ b/src/assets/styles/LandingPage.module.css
@@ -1,8 +1,21 @@
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(15px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .startSection {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards; /* Duração, tipo de transição e preenchimento */
 }
 
 .startSection .leftSide {
